<resources>
    <string name="app_name">Tanam</string>
    <string name="Judul">Carilah Tanaman Kesukaan-mu</string>
    <string name="deskripsi">Kami bantu carikan informasi terkait tanaman kesukaanmu!</string>
    <string name="tanaman_inp">Nama Tanaman</string>
    <string name="cari">Cari</string>
    <string name="details">Details</string>
    <string name="cari_invalid">Pencarian harus diisi</string>
    <string name="data_invalid">Maaf, data tidak tersedia</string>
    <string name="judulNama">Input Data Tanaman</string>
    <string name="judul_tanaman">Judul Tanaman</string>
    <string name="inputNamaLatin">Nama Latin</string>
    <string name="hintDeskripsi">Deskripsi singkat</string>
    <string name="hintRawat">Cara merawat</string>
    <string name="Selesai">Selesai</string>
    <string name="tambah_data">Tambah Data</string>
    <string name="pencarian">Pencarian</string>
    <string name="list_tanaman">List Tanaman</string>
    <string name="empty">Belum ada data</string>
    <string name="konfirmasi_hapus">Yakin untuk menghapus?</string>
    <string name="hapus">Ya</string>
    <string name="batal">Tidak</string>
    <string name="deskripsi_x">"Deskripsi : %1$s … "</string>
    <string name="content_desc">Dummy image</string>
    <string name="about_us">Tentang kami</string>
    <string name="deskripsiInput">Silakan masukkan data tanaman sesuka mu</string>
    <string name="judulInput">Selamat Datang!</string>
    <string name="copyright">Tanam merupakan sebuah aplikasi Android sederhana untuk mencari informasi, mengisi informasi, juga menghapus informasi tanaman. \n\nAplikasi ini dibuat untuk Asesmen 2 Mobpro. Temukan kodenya di https://github.com/disyudhis/Asesmen1-Mopro\n\nCopyright © 2023 Yudhistira Haryatmaka.\nAll rights reserved</string>
    <string name="koneksi_error">Koneksi error</string>
    <string name="message">%1$s diklik!</string>
    <string name="channel_name">Updater</string>
    <string name="channel_desc">Update data tanaman otomatis</string>
    <string name="notif_title">Ada tanaman baru!</string>
    <string name="notif_text">Cek sekarang yu...</string>
</resources>