<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".home.SearchFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/alfa_slab_one"
            android:gravity="center"
            android:text="@string/Judul"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/deskripsi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:gravity="center"
            android:text="@string/deskripsi"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tanamanHint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintTop_toBottomOf="@+id/deskripsi">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tanamanInp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tanaman_inp" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:text="@string/cari"
            app:layout_constraintEnd_toEndOf="@+id/tanamanHint"
            app:layout_constraintTop_toBottomOf="@+id/tanamanHint" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintTop_toBottomOf="@+id/button" />

        <TextView
            android:id="@+id/details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/arvo_bold"
            android:gravity="center"
            android:text="@string/details"
            android:textSize="18sp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider" />

        <ImageView
            android:id="@+id/gambar"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/details"
            tools:background="@color/green_200"
            tools:src="@drawable/monstera" />

        <TextView
            android:id="@+id/judulTanaman"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/arvo_bold"
            android:gravity="center"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/gambar"
            tools:text="Monstera Deliciosa" />

        <TextView
            android:id="@+id/namaLatin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:gravity="center"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="@id/judulTanaman"
            app:layout_constraintStart_toStartOf="@id/judulTanaman"
            app:layout_constraintTop_toBottomOf="@id/judulTanaman"
            tools:text="Monstera deliciosa" />

        <TextView
            android:id="@+id/deskripsiTanaman"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="sans-serif-black"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/namaLatin"
            tools:text="Monstera Deliciosa, juga dikenal sebagai tanaman berdaun besar Swiss Cheese Plant, adalah tanaman indoor populer yang dapat bertumbuh hingga beberapa meter tingginya. Berikut adalah beberapa tips merawat Monstera Deliciosa:" />

        <TextView
            android:id="@+id/cara"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/deskripsiTanaman"
            app:layout_constraintStart_toStartOf="@+id/deskripsiTanaman"
            app:layout_constraintTop_toBottomOf="@id/deskripsiTanaman"
            tools:text="1. Pilih lokasi yang tepat: Monstera Deliciosa membutuhkan cahaya yang cukup untuk tumbuh dengan baik, tetapi hindari sinar matahari langsung yang dapat membakar daun. Letakkan tanaman di dekat jendela yang mendapat sinar matahari pagi atau sore." />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>